# chronos

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  appveyor.yml
examples/: CMakeLists.txt  example_1.cpp  example_2.cpp  example_3.cpp
include/: Chronos.hpp  DLLDefines.h  Timer.hpp  Timers.hpp
source/: CMakeLists.txt  Timer.cpp  Timers.cpp
tests/: CMakeLists.txt  test_timer.cpp
